# Art-Compression

./: CMakeLists.txt  README.md  pa3  pa3test  stats.cpp  stats.h  testComp.cpp  toqutree.cpp  toqutree.h
